--- a/css/faq.css
+++ b/css/faq.css
@@ -31,11 +31,54 @@
     padding: 20px 0;
 }
 
+.faq__question-container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: stretch;
+    padding-bottom: 10px;
+}
+
 .faq__question {
     font-family: var(--secondary-font);
     color: var(--secondary-text-color);
     font-size: 23px;
-    font-weight: 600;    
+    font-weight: 600;  
+    position: relative;
+    max-width: calc(100% - 35px);  
+    display: block;
+}
+
+.faq__question-expand{
+    position: relative;
+    max-width: 15px;
+    height: 15px;
+    margin-left: 20px;
+    flex-basis: 15px;
+    right: 0;
+    display: block;
+}
+
+.faq__question-expand::before,
+.faq__question-expand::after {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    background-color: var(--primary-text-color);
+    transform: translate(-50%,-50%);
+    border-radius: 3px;
+}
+
+.faq__question-expand::before {
+    width: 2px;
+    height: 100%;
+    transition: height .3s ease;
+}
+
+.faq__question-expand::after {
+    width: 100%;
+    height: 2px;
 }
 
 .faq__question-answer {
@@ -43,7 +86,9 @@
     color: var(--paragraph-text-color);
     font-size: 17px;
     letter-spacing: 0em;
-    padding-top: 15px;
+    /* padding-top: 15px; */
+    height: 0;
+    overflow: hidden;
 }
 
 .faq__question-line hr{
