--- a/css/faq.css
+++ b/css/faq.css
@@ -28,7 +28,8 @@
 }
 
 .faq__question-acordion{
-    padding: 20px 0;
+    padding-top: 20px;
+    padding-bottom: 15px;
 }
 
 .faq__question-container {
@@ -36,7 +37,7 @@
     flex-direction: row;
     align-items: baseline;
     justify-content: stretch;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .faq__question {
