--- a/css/works.css
+++ b/css/works.css
@@ -26,131 +26,7 @@
   font-size: 14px;
 }
 
-.latest-work__photos {
-  margin-top: 45px;
-  display: grid;
-}
-
-
-.latest-work__photos {
-  max-width: 1170px;
-  min-height: max-content;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  padding: 0px 24px;
-}
-
-
-.latest-work__fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
-
-@media only screen and (max-width: 300px) {
-
-  .latest-work__prev,
-  .latest-work__next {
-    font-size: 11px
-  }
-}
-
-.latest-work__image__girl-sun {
-  display: grid;
-}
-
-.latest-work__image__girl-turn {
-  display: none;
-}
-
-.latest-work__image__girl-jaket {
-  display: none;
-}
-
-
-.latest-work__prev__container,
-.latest-work__next__container {
-  position: absolute;
-  top: 50%;
-  background-color: var(--button-background-color);
-  border-radius: 100%;
-  height: 24px;
-  width: 24px;
-  color: var(--button_slide_color);
-
-}
-
-.latest-work__prev__container {
-  left: 1%;
-}
-
-.latest-work__prev__container:hover,
-.latest-work__next__container:hover {
-  background-color: var(--button-slide-color);
-}
-
-.latest-work__next__container {
-  right: 1%;
-}
-
-.latest-work__prev,
-.latest-work__next {
-  top: 50%;
-}
-
-@media (min-width: 768px) {
-
-  .latest-work__prev__container:hover,
-  .latest-work__next__container:hover {
-    height: 28px;
-    width: 28px;
-  }
-
-}
-
-@media (min-width: 1000px) {
-  .latest-work__prev,
-  .latest-work__next {
-    font-size: 28px;
-  }
-
-  .latest-work__prev__container,
-  .latest-work__next__container {
-     background-color: var(--primary-background-color);
-  }
-  .latest-work__prev__container:hover,
-  .latest-work__next__container:hover {
-    background-color: var(--primary-background-color);
-  }
-
-  .latest-work__next__container {
-    right: 0;
-  }
-
-  .latest-work__prev__container {
-    left: 0;
-  }
+.latest-work_carousel_btn-prev,
+.latest-work_carousel_btn-next {
+  background-color: var(--secondary-font);
 }
