--- a/css/controls.css
+++ b/css/controls.css
@@ -178,8 +178,8 @@
 
 .wave {
   animation-name: wave;
-  animation-duration: 2s;
-  animation-timing-function: linear;
+  animation-duration: 1.5s;
+  animation-timing-function: ease;
   animation-iteration-count: infinite;
 }
 
