--- a/css/works.css
+++ b/css/works.css
@@ -29,4 +29,25 @@
 .latest-work_carousel_btn-prev,
 .latest-work_carousel_btn-next {
   background-color: var(--secondary-font);
+
+}
+
+.latest-work__photos {
+  display: flex;
+  margin: auto;
+  max-width: 1100px;
+}
+
+.latest-work_carousel_slide-container {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+.latest-work_carousel_slide-container img{
+  max-width: 481px;
+}
+@media (max-width: 880px) {
+  .latest-work_carousel_slide-container{
+    margin: auto;
+  }
 }
