--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  padding-top: 220px;
+  padding-top: 135px;
 }
 
 .hero__item {
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  flex: 1;
+  max-width: 415px;
   margin: auto;
 }
 
