--- a/css/footer.css
+++ b/css/footer.css
@@ -69,7 +69,7 @@
     .footer__container {
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
       flex: 1;
       margin: auto;
